INCLUDE/WIN16/OLECTL.H


typedef const OLECHAR FAR* LPCOLESTR;

typedef struct tagOCPFIPARAMS FAR* LPOCPFIPARAMS;

typedef struct tagFONTDESC FAR* LPFONTDESC;

typedef struct tagPICTDESC FAR* LPPICTDESC;



/////////////////////////////////////////////////////////////////////////////
// Typedefs for standard scalar types

typedef DWORD OLE_COLOR;



/////////////////////////////////////////////////////////////////////////////
// Property frame APIs

STDAPI OleCreatePropertyFrame(HWND hwndOwner, UINT x, UINT y,
	LPCOLESTR lpszCaption, ULONG cObjects, LPUNKNOWN FAR* ppUnk, ULONG cPages,
	LPCLSID pPageClsID, LCID lcid, DWORD dwReserved, LPVOID pvReserved);


STDAPI OleCreatePropertyFrameIndirect(LPOCPFIPARAMS lpParams);



/////////////////////////////////////////////////////////////////////////////
// Standard type APIs

STDAPI OleTranslateColor(OLE_COLOR clr, HPALETTE hpal, COLORREF* lpcolorref);


STDAPI OleCreateFontIndirect(LPFONTDESC lpFontDesc, REFIID riid,
	LPVOID FAR* lplpvObj);


STDAPI OleCreatePictureIndirect(LPPICTDESC lpPictDesc, REFIID riid, BOOL fOwn,
	LPVOID FAR* lplpvObj);


STDAPI OleLoadPicture(LPSTREAM lpstream, LONG lSize, BOOL fRunmode,
	REFIID riid, LPVOID FAR* lplpvObj);


STDAPI_(HCURSOR) OleIconToCursor(HINSTANCE hinstExe, HICON hIcon);