INCLUDE/Vcl/OLECTL.HPP



typedef int TOleColor;


typedef tagOCPFIPARAMS  TOCPFIParams;


typedef tagFONTDESC  TFontDesc;


typedef tagPICTDESC  TPictDesc;


//-- var, const, procedure ---------------------------------------------------
extern PACKAGE GUID CLSID_CFontPropPage;

extern PACKAGE GUID CLSID_CColorPropPage;

extern PACKAGE GUID CLSID_CPicturePropPage;

extern PACKAGE GUID CLSID_PersistPropset;

extern PACKAGE GUID CLSID_ConvertVBX;

extern PACKAGE GUID CLSID_StdFont;

extern PACKAGE GUID CLSID_StdPicture;