SOURCE/Vcl/OLECTL.PAS


  {$EXTERNALSYM IID_IPropertyNotifySink}
  IID_IPropertyNotifySink: TGUID = (
    D1:$9BFBBC02;D2:$EFF1;D3:$101A;D4:($84,$ED,$00,$AA,$00,$34,$1D,$07));
  {$EXTERNALSYM IID_IClassFactory2}
  IID_IClassFactory2: TGUID = (
    D1:$B196B28F;D2:$BAB4;D3:$101A;D4:($B6,$9C,$00,$AA,$00,$34,$1D,$07));
  {$EXTERNALSYM IID_IProvideClassInfo}
  IID_IProvideClassInfo: TGUID = (
    D1:$B196B283;D2:$BAB4;D3:$101A;D4:($B6,$9C,$00,$AA,$00,$34,$1D,$07));
  {$EXTERNALSYM IID_IConnectionPointContainer}
  IID_IConnectionPointContainer: TGUID = (
    D1:$B196B284;D2:$BAB4;D3:$101A;D4:($B6,$9C,$00,$AA,$00,$34,$1D,$07));
  {$EXTERNALSYM IID_IEnumConnectionPoints}
  IID_IEnumConnectionPoints: TGUID = (
    D1:$B196B285;D2:$BAB4;D3:$101A;D4:($B6,$9C,$00,$AA,$00,$34,$1D,$07));
  {$EXTERNALSYM IID_IConnectionPoint}
  IID_IConnectionPoint: TGUID = (
    D1:$B196B286;D2:$BAB4;D3:$101A;D4:($B6,$9C,$00,$AA,$00,$34,$1D,$07));
  {$EXTERNALSYM IID_IEnumConnections}
  IID_IEnumConnections: TGUID = (
    D1:$B196B287;D2:$BAB4;D3:$101A;D4:($B6,$9C,$00,$AA,$00,$34,$1D,$07));
  {$EXTERNALSYM IID_IOleControl}
  IID_IOleControl: TGUID = (
    D1:$B196B288;D2:$BAB4;D3:$101A;D4:($B6,$9C,$00,$AA,$00,$34,$1D,$07));
  {$EXTERNALSYM IID_IOleControlSite}
  IID_IOleControlSite: TGUID = (
    D1:$B196B289;D2:$BAB4;D3:$101A;D4:($B6,$9C,$00,$AA,$00,$34,$1D,$07));
  {$EXTERNALSYM IID_ISimpleFrameSite}
  IID_ISimpleFrameSite: TGUID = (
    D1:$742B0E01;D2:$14E6;D3:$101B;D4:($91,$4E,$00,$AA,$00,$30,$0C,$AB));
  {$EXTERNALSYM IID_IPersistStreamInit}
  IID_IPersistStreamInit: TGUID = (
    D1:$7FD52380;D2:$4E07;D3:$101B;D4:($AE,$2D,$08,$00,$2B,$2E,$C7,$13));
  {$EXTERNALSYM IID_IPropertyFrame}
  IID_IPropertyFrame: TGUID = (
    D1:$B196B28A;D2:$BAB4;D3:$101A;D4:($B6,$9C,$00,$AA,$00,$34,$1D,$07));
  {$EXTERNALSYM IID_ISpecifyPropertyPages}
  IID_ISpecifyPropertyPages: TGUID = (
    D1:$B196B28B;D2:$BAB4;D3:$101A;D4:($B6,$9C,$00,$AA,$00,$34,$1D,$07));
  {$EXTERNALSYM IID_IPerPropertyBrowsing}
  IID_IPerPropertyBrowsing: TGUID = (
    D1:$376BD3AA;D2:$3845;D3:$101B;D4:($84,$ED,$08,$00,$2B,$2E,$C7,$13));
  {$EXTERNALSYM IID_IPropertyPageSite}
  IID_IPropertyPageSite: TGUID = (
    D1:$B196B28C;D2:$BAB4;D3:$101A;D4:($B6,$9C,$00,$AA,$00,$34,$1D,$07));
  {$EXTERNALSYM IID_IPropertyPage}
  IID_IPropertyPage: TGUID = (
    D1:$B196B28D;D2:$BAB4;D3:$101A;D4:($B6,$9C,$00,$AA,$00,$34,$1D,$07));
  {$EXTERNALSYM IID_IPropertyPage2}
  IID_IPropertyPage2: TGUID = (
    D1:$01E44665;D2:$24AC;D3:$101B;D4:($84,$ED,$08,$00,$2B,$2E,$C7,$13));
  {$EXTERNALSYM IID_IFont}
  IID_IFont: TGUID = (
    D1:$BEF6E002;D2:$A874;D3:$101A;D4:($8B,$BA,$00,$AA,$00,$30,$0C,$AB));
  {$EXTERNALSYM IID_IFontDisp}
  IID_IFontDisp: TGUID = (
    D1:$BEF6E003;D2:$A874;D3:$101A;D4:($8B,$BA,$00,$AA,$00,$30,$0C,$AB));
  {$EXTERNALSYM IID_IPicture}
  IID_IPicture: TGUID = (
    D1:$7BF80980;D2:$BF32;D3:$101A;D4:($8B,$BB,$00,$AA,$00,$30,$0C,$AB));
  {$EXTERNALSYM IID_IPictureDisp}
  IID_IPictureDisp: TGUID = (
    D1:$7Bf80981;D2:$BF32;D3:$101A;D4:($8B,$BB,$00,$AA,$00,$30,$0C,$AB));

{ Standard class IDs }

  CLSID_CFontPropPage: TGUID = (
    D1:$2542f180;D2:$3532;D3:$1069;D4:($a2,$cd,$00,$aa,$00,$34,$b5,$0b));
  CLSID_CColorPropPage: TGUID = (
    D1:$ddf5a600;D2:$b9c0;D3:$101a;D4:($af,$1a,$00,$aa,$00,$34,$b5,$0b));
  CLSID_CPicturePropPage: TGUID = (
    D1:$fc7af71d;D2:$fc74;D3:$101a;D4:($84,$ed,$08,$00,$2b,$2e,$c7,$13));
  CLSID_PersistPropset: TGUID = (
    D1:$fb8f0821;D2:$0164;D3:$101b;D4:($84,$ed,$08,$00,$2b,$2e,$c7,$13));
  CLSID_ConvertVBX: TGUID = (
    D1:$fb8f0822;D2:$0164;D3:$101b;D4:($84,$ed,$08,$00,$2b,$2e,$c7,$13));
  CLSID_StdFont: TGUID = (
    D1:$fb8f0823;D2:$0164;D3:$101b;D4:($84,$ed,$08,$00,$2b,$2e,$c7,$13));
  CLSID_StdPicture: TGUID = (
    D1:$fb8f0824;D2:$0164;D3:$101b;D4:($84,$ed,$08,$00,$2b,$2e,$c7,$13));

{ Property frame APIs }

{$EXTERNALSYM OleCreatePropertyFrame}
function OleCreatePropertyFrame(hwndOwner: HWnd; x, y: Integer;
  lpszCaption: POleStr; cObjects: Integer; pObjects: Pointer;
  cPages: Integer; pPageCLSIDs: Pointer; lcid: TLCID; dwReserved: Longint;
  pvReserved: Pointer): HResult; stdcall;

{$EXTERNALSYM OleCreatePropertyFrameIndirect}
function OleCreatePropertyFrameIndirect(var Params: TOCPFIParams): HResult; stdcall;

{ Standard type APIs }

{$EXTERNALSYM OleTranslateColor}
function OleTranslateColor(clr: TOleColor; hpal: HPalette;
 var colorref: TColorRef): HResult; stdcall;

{$EXTERNALSYM OleCreateFontIndirect}
function OleCreateFontIndirect(var FontDesc: TFontDesc; const iid: TIID;
  var vObject): HResult; stdcall;

{$EXTERNALSYM OleCreatePictureIndirect}
function OleCreatePictureIndirect(var PictDesc: TPictDesc; const iid: TIID;
  fOwn: BOOL; var vObject): HResult; stdcall;

{$EXTERNALSYM OleLoadPicture}
function OleLoadPicture(stream: IStream; lSize: Longint; fRunmode: BOOL;
  const iid: TIID; var vObject): HResult; stdcall;

{$EXTERNALSYM OleIconToCursor}
function OleIconToCursor(hinstExe: THandle; hIcon: THandle): HCursor; stdcall;

implementation

const
  olepro32 = 'olepro32.dll';

{ Externals from olepro32.dll }

function OleCreatePropertyFrame;            external olepro32 name 'OleCreatePropertyFrame';
function OleCreatePropertyFrameIndirect;    external olepro32 name 'OleCreatePropertyFrameIndirect';
function OleTranslateColor;                 external olepro32 name 'OleTranslateColor';
function OleCreateFontIndirect;             external olepro32 name 'OleCreateFontIndirect';
function OleCreatePictureIndirect;          external olepro32 name 'OleCreatePictureIndirect';
function OleLoadPicture;                    external olepro32 name 'OleLoadPicture';
function OleIconToCursor;                   external olepro32 name 'OleIconToCursor';

end.
